package version1;

public class Printer {
}
